Bug 31243 - Display Problem with vegur font
Summary: Display Problem with vegur font
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other Linux (All)
: high normal
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard:
Keywords:
: 32438 32501 32517 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-30 12:48 UTC by André Schnabel
Modified: 2012-05-04 00:50 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot ith broken text dislayed (59.97 KB, image/png)
2010-10-30 12:48 UTC, André Schnabel
Details
Prsentation using vegur and special chars (119.04 KB, application/vnd.oasis.opendocument.presentation)
2010-10-30 12:49 UTC, André Schnabel
Details
a rough and ready approach (19.00 KB, patch)
2010-11-30 05:17 UTC, Caolán McNamara
Details
a rough and ready approach (19.18 KB, patch)
2010-11-30 05:31 UTC, Caolán McNamara
Details
Slightly different angle of attack (20.06 KB, patch)
2010-11-30 15:21 UTC, Thorsten Behrens (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Schnabel 2010-10-30 12:48:31 UTC
Created attachment 39912 [details]
Screenshot ith broken text dislayed

Presentations using the vegur font have (actually the default font for our own branding / artwork) display problems with special characters.

While display in edit mode is quite ok, text completely breaks in slideshow mode, if hardware acceleration is enabled. So this might be cairo-related.

Vegur font  can be downloaded from
http://www.fontspace.com/arro/vegur

Screenshot has been taken on OpenSuse 11.3, KDE Desktop (EeePC 901), build from git as of 2010-10-29 (same problem is visible in LibO beta2 download version)
Comment 1 André Schnabel 2010-10-30 12:49:27 UTC
Created attachment 39913 [details]
Prsentation using vegur and special chars
Comment 2 Thorsten Behrens (allotropia) 2010-11-01 04:31:34 UTC
Confirmed. Taking over.
Comment 3 Thorsten Behrens (allotropia) 2010-11-29 17:52:49 UTC
Ok, two problems here. First one - Vegur totally messes up freetype hinting. Putting this into your ~/.fontconfig helps with the borked 'g' and 'p' glyphs:

<!-- Vegur totally fucks up cairo rendering when hinted -->
<match target="font">
  <test name="family"    compare="eq"><string>Vegur</string></test>
  <edit name="hintstyle" mode="assign" ><const>hintnone</const></edit>
</match>

Second problem: in slideshow mode, apparently glyph fallbacks are not handled correctly, have to have a much deeper look there.
Comment 4 Thorsten Behrens (allotropia) 2010-11-29 17:53:54 UTC
Caolan, some cairo/freetype guru your side that may want to have a look into Vegur here?
Comment 5 Thorsten Behrens (allotropia) 2010-11-29 17:55:53 UTC
cairo-1.8.10-3.1.x86_64 and libfreetype6-2.3.12-7.2.1.x86_64 FWIW (opensuse 11.3)
Comment 6 Caolán McNamara 2010-11-30 04:13:21 UTC
OutputDevice::GetSysTextLayoutData is unfortunately rather suboptimal in the glyph fallback case
Comment 7 Thorsten Behrens (allotropia) 2010-11-30 04:54:04 UTC
Yap. Working on an improvement.
Comment 8 Caolán McNamara 2010-11-30 05:17:18 UTC
Created attachment 40666 [details]
a rough and ready approach
Comment 9 Caolán McNamara 2010-11-30 05:31:42 UTC
Created attachment 40667 [details]
a rough and ready approach
Comment 10 Thorsten Behrens (allotropia) 2010-11-30 15:21:19 UTC
Created attachment 40682 [details]
Slightly different angle of attack

Using font handles as calculated inside vcl, plus some cleanup to glyph rendering code in cairocanvas. Downside: exposes sallayout.hxx outside vcl. Could be made slightly better for post-3-3 ...
Comment 11 Thorsten Behrens (allotropia) 2010-11-30 15:32:48 UTC
@caolan: oh doh - you shouldn't call it rough, it's better than my approach. Let's go for that one.
Comment 12 Thorsten Behrens (allotropia) 2010-12-03 04:05:19 UTC
Fixed with commit 1fada0bf264d7c5e37087c31bbfe11955ed5b782. Kudos to Caolan for the patch.
Comment 13 Thorsten Behrens (allotropia) 2010-12-16 12:16:51 UTC
*** Bug 32438 has been marked as a duplicate of this bug. ***
Comment 14 Caolán McNamara 2010-12-21 13:28:06 UTC
*** Bug 32501 has been marked as a duplicate of this bug. ***
Comment 15 sophie 2011-01-15 05:36:19 UTC
Verified with Cor doc on the other issue - Closed - Sophie
Comment 16 Katarina Behrens 2011-03-23 08:29:08 UTC
*** Bug 32517 has been marked as a duplicate of this bug. ***
Comment 17 Roman Eisele 2012-05-04 00:50:17 UTC
This is an Impress issue, therefore changed 'Component' field accordingly and abbreviated Summary ('Impress:' is no longer necessary due to Component field).