Resolves: fdo#31243 glyph fallback for cairo-canvas