vcl/inc/vcl/sysdata.hxx
@@ -151,6 +151,7 @@ struct SystemGlyphData
     unsigned long        index;
     double               x;
     double               y;
+    int                  fallbacklevel;
 };
 
 
@@ -179,12 +180,12 @@ struct SystemFontData
 // - SystemTextLayoutData -
 // --------------------
 
+typedef std::vector<SystemGlyphData> SystemGlyphDataVector;
 struct SystemTextLayoutData
 {
-    unsigned long   nSize;                      // size in bytes of this structure
-    std::vector<SystemGlyphData> rGlyphData;    // glyph data
-    int             orientation;                // Text orientation
-    SystemFontData aSysFontData;                // Font data for the text layout
+    unsigned long         nSize;         // size in bytes of this structure
+    SystemGlyphDataVector rGlyphData;    // glyph data
+    int                   orientation;   // Text orientation
 };
 
 #endif // _SV_SYSDATA_HXX
